doc: more doc cleanup